--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">GameApp</string>
 
-    <string name="menu_action_level_easy">Easy</string>
-    <string name="menu_action_level_medium">Medium</string>
-    <string name="menu_action_level_hard">Hard</string>
+    <string name="action_level_title">Select Level</string>
+    <string name="action_level_easy">Easy</string>
+    <string name="action_level_medium">Medium</string>
+    <string name="action_level_hard">Hard</string>
 
     <string name="dialog_msg_loading">Loading...</string>
 </resources>
